@@ -1,0 +1,13 @@
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <group>
+        <clip-path
+            android:pathData="M0,0h24v24h-24z"/>
+        <path
+            android:pathData="M8.85,17.825L12,15.925L15.15,17.85L14.325,14.25L17.1,11.85L13.45,11.525L12,8.125L10.55,11.5L6.9,11.825L9.675,14.25L8.85,17.825ZM5.825,22L7.45,14.975L2,10.25L9.2,9.625L12,3L14.8,9.625L22,10.25L16.55,14.975L18.175,22L12,18.275L5.825,22Z"
+            android:fillColor="#1C1B1F"/>
+    </group>
+</vector>
