@@ -5,6 +5,8 @@ Best: 32
 20-03-2025
 Streak: 1
     - Add component directory to presentation - for not-quite-screen level fragments and entities outside the nav graph
+    - Reorganise directory structure
+    - Following Tutorial: Add drawable resources for tutorial
 
 17-03-2025
 Streak: 2
